# sampml

./: .travis.yml  LICENSE  README.md  appveyor.yml  linux.appveyor.yml  windows.appveyor.yml
datasets/proaim/: ProaimPositive
datasets/proaim/v1/: ProaimNegative
datasets/proaim/v2/: NoAimbotMovingLocalized  ProaimMovingLocalized
examples/anti-aimbot/: README.md
examples/anti-aimbot/filterscripts/: AntiAimbot.pwn  DCS.pwn
examples/anti-aimbot/include/: aimbot_dc.inc
examples/anti-aimbot/includes/: aimbot_dc.inc
examples/anti-aimbot/plugin/: CMakeLists.txt
examples/anti-aimbot/plugin/lib/sampml/: data.hpp
examples/anti-aimbot/plugin/lib/sdk/amx/: amx.h
examples/anti-aimbot/plugin/plugin/: CMakeLists.txt  iscript.cpp  iscript.hpp  main.cpp  main.h  samp.hpp  transform.hpp  version.h
examples/anti-aimbot/plugin/plugin/natives/: classifier.cpp  classifier.hpp  dnn.hpp  samp.hpp  transform.hpp
examples/anti-aimbot/plugin/plugin/tools/: config_reader.hpp  fixed_thread_pool.hpp
examples/anti-aimbot/training/: Makefile  NOTES.md  README.md  analyzer.cpp  combined.cpp  common.hpp  dnn.cpp  dnn.hpp  main.cpp  pca.cpp  rf.cpp  samp.hpp  standalone_tester.cpp  svm.cpp  transform.hpp  transformer.cpp
filterscripts/: DCS.pwn
includes/: aimbot_dc.inc
sampml/: README.md  example_proaim.cpp
sampml/sampml/: common.hpp  data.hpp  exception.hpp  feature_vector.hpp  random_forest.hpp  svm_classifier.hpp
